-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.572 2009-07-09 13:15:41 remko Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2009-07-10
	* GMT 4.5.0 finalized and released
-----------------------------------------------------------------------------------------

2009-07-09	remko
	* psclip.c:		Produce warning when using -B in combination with -N or -T.
				Better reuse of code.
	* psclip.txt:		Explained even-odd rule.
	* psxy.{c,txt}:		Added -T option. Equivalent to adding /dev/null (or NUL on Windows).
	* pslegend.c, anim01.sh:	Make use of new psxy -T option.

2009-07-08	pwessel
	* sph/sphtriangulate.c:	Must turn -mo on when -T is selected.

2009-07-08	remko
	* psscale.c:		When using -A on vertical scale bar, annotation was left not right aligned.

2009-07-07	pwessel
	* gmt_plot.c:		The polar cap on gridlines needed to be reversed for r-theta (polar) maps

2009-07-07	remko
	* gmt_support.c (GMT_RI_prepare):	Fixed bug: when x_inc in km, m, etc,
				value was ignored (always 1).

2009-07-05	pwessel
	* grdimage.c:		For -Q we now make sure the NaN-color is unique.

2009-07-04	jluis
	* gmtsuppl.bat:		Add x2sys_list x2sys_report x2sys_solve & x2sys_merge to the x2sys section

2009-07-02	remko
	* Ellipsoids.txt:	Added TOPEX ellipsoid

2009-07-01	pwessel
	* mgd77/mgd77sniffer.c:	Did not reset the E77 structure between cruises.
	* mgd77/mgd77list.c:	Modifier -At added which attempts to create fake cruise times
				based on header information and distance along track.

2009-06-30	pwessel
	* grdfilter.c:		Toggle -T was not processed correctly if -Rgridfile was given.
	* mgd77list.c:		Output relative time did not use GMT's --TIME_*

2009-06-27	remko
	* gmt_init.c (GMT_history):	No longer remove supposedly empty .gmtcommands4 file.